2013-03-09  Ilija Kocho  <ilijak@siva.com.mk>

	* misc/redboot_ROM_FPU.ecm: Add ECM for RedBoot with FPU support.

2012-12-01  Ilija Kocho  <ilijak@siva.com.mk>

	* cdl/hal_cortexm_stm32_stm32x0g_eval.cdl: Implement CYGINT_HAL_FPV4_SP_D16.
	[Bugzilla 1001607]

2012-03-29  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/pkgconf/mlt_cortexm_stm32x0g_eval_sram.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_romint.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_rom.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_jtag.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_ram.ldi:
	Correct number of VSR table entries.
	* src/stm32x0g_eval_misc.c (hal_platform_init): Add assertion checks
	that layout of vector tables at bottom of SRAM is what it should be.

2012-03-29  James Smith  <jsmith@ecoscentric.com>

	* include/pkgconf/mlt_cortexm_stm32x0g_eval_sram.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_romint.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_rom.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_jtag.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_ram.ldi:
	Provide hal_virtual_vector_table_end symbol to allow the
	SECTION_sram pre-allocation to be minimised to the actual platform
	requirements.

	* src/stm32x0g_eval_misc.c: Provide #error check on linker script
	hardwired CYGNUM_CALL_IF_TABLE_SIZE assumption.

2012-03-23  James Smith  <jsmith@ecoscentric.com>

	* include/plf_io.h: Update GPIO pin definitions to use new PIN
	wrapper macros. Update the I2C lines to specify PULLUP.

2012-03-22  James Smith  <jsmith@ecoscentric.com>

	* include/plf_io.h (CYGHWR_HAL_STM32_ETH_MII_*): Platform specific
	ethernet pin manifests updated to use new GPIO PIN macros.

2012-03-15  James Smith  <jsmith@ecoscentric.com>

	* cdl/hal_cortexm_stm32_stm32x0g_eval.cdl:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_jtag.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_jtag.ldi:
	* include/pkgconf/mlt_cortexm_stm32x0g_eval_ram.ldi: